[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/StoreElements/StoreVars.gd" type="Script" id=1]
[ext_resource path="res://Assets/Silver.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ARIALBD.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/SFX/cash-register-purchase-87313.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/bgm/Wholesome.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Store/SpeedIcon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Store/EnduranceIcon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Store/ReachIcon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Store/StrengthIcon.png" type="Texture" id=9]
[ext_resource path="res://Assets/Store/SusIcon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Store/GlowIcon.png" type="Texture" id=11]
[ext_resource path="res://Assets/Store/LuckIcon.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
font_data = ExtResource( 3 )

[node name="Node" type="Popup"]
visible = true
margin_right = 900.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309804, 0.207843, 0.207843, 1 )

[node name="Balance" type="Label" parent="."]
margin_left = 407.0
margin_top = 64.0
margin_right = 447.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.0
margin_top = 5.0
margin_right = 129.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 1 )
text = "STORE"

[node name="Kaching" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -26.277
bus = "SFX"

[node name="tavernbg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -16.526
bus = "Music"

[node name="buySpeedPowerup" type="TextureButton" parent="."]
margin_left = 178.0
margin_top = 177.0
margin_right = 658.0
margin_bottom = 657.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )

[node name="buyStrengthPowerup" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 177.0
margin_right = 808.0
margin_bottom = 657.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 9 )

[node name="buyEndurancePowerup" type="TextureButton" parent="."]
margin_left = 478.0
margin_top = 177.0
margin_right = 958.0
margin_bottom = 657.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )

[node name="buyReachPowerup" type="TextureButton" parent="."]
margin_left = 628.0
margin_top = 177.0
margin_right = 1108.0
margin_bottom = 657.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 8 )

[node name="buyLuckPowerup" type="TextureButton" parent="."]
margin_left = 178.0
margin_top = 327.0
margin_right = 658.0
margin_bottom = 807.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 12 )

[node name="buySusPowerup" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 327.0
margin_right = 808.0
margin_bottom = 807.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 10 )

[node name="buyGlowPowerup" type="TextureButton" parent="."]
margin_left = 478.0
margin_top = 327.0
margin_right = 958.0
margin_bottom = 807.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 11 )

[connection signal="pressed" from="buySpeedPowerup" to="." method="_on_buySpeedPowerup_pressed"]
[connection signal="pressed" from="buyStrengthPowerup" to="." method="_on_buyStrengthPowerup_pressed"]
[connection signal="pressed" from="buyEndurancePowerup" to="." method="_on_buyEndurancePowerup_pressed"]
[connection signal="pressed" from="buyReachPowerup" to="." method="_on_buyReachPowerup_pressed"]
[connection signal="pressed" from="buyLuckPowerup" to="." method="_on_buyLuckPowerup_pressed"]
[connection signal="pressed" from="buySusPowerup" to="." method="_on_buySusPowerup_pressed"]
[connection signal="pressed" from="buyGlowPowerup" to="." method="_on_buyGlowPowerup_pressed"]
